amcart-istio-cert/templates/istio-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
 name: root-gateway
 namespace: istio-ingress
spec:
 selector:
   istio: ingressgateway
 servers:
  - port:
     number: 443
     name: https
     protocol: HTTPS
    tls:
     mode: SIMPLE
     credentialName: amcart-tls-secret
    hosts:
    - 'amcart-api.centralus.cloudapp.azure.com'
