amcart-istio-cert/templates/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
   name: amcart-server
   namespace: amcart
spec:
   hosts:
   - 'amcart-api.centralus.cloudapp.azure.com'
   gateways:
   - istio-ingress/root-gateway
   http:
   - match:
     - uri:
         prefix: /api/v1/search
     route:
     - destination:
         host: search-api-svc.amcart.svc.cluster.local
         port:
           number: 8080
       retries:
        attempts: 3                
        perTryTimeout: 100s          
        retryOn: 5xx, gateway-error, connect-failure,refused-stream
   - match:
     - uri:
         prefix: /api/v1/products
     route:
     - destination:
         host: product-api-svc.amcart.svc.cluster.local
         port:
           number: 8080
       retries:
        attempts: 3                
        perTryTimeout: 100s          
        retryOn: 5xx, gateway-error, connect-failure,refused-stream
